--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,8 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/page/page.css);
 
 /*HEADER*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
