--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,8 @@
 
 .page {
   max-width: 1280px;
-  height: 100vh;
-  background-color: #2A2C2F;
+  height: 100%;
+  background-color: #2a2c2f;
   margin: 0 auto 0 auto;
   
 }
