--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,10 +3,7 @@
   margin-top: 46px;
   font-size: 24px;
   line-height: 28px;
-}
-
-.header__lang-link:nth-of-type(1) {
-  text-decoration-line: underline;
+  font-family: 'Inter';
 }
 
 .header__lang-link:nth-of-type(2) {
