--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,14 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+
+/*LEAD*/
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__point/lead__point.css);
+@import url(../blocks/lead/__route/lead__route.css);
+@import url(../blocks/lead/__locality/lead__locality.css);
+@import url(../blocks/lead/__container/lead__container.css);
