--- a/pages/index.css
+++ b/pages/index.css
@@ -17,3 +17,10 @@
 @import url(../blocks/lead/__route/lead__route.css);
 @import url(../blocks/lead/__locality/lead__locality.css);
 @import url(../blocks/lead/__container/lead__container.css);
+
+/*INTRO*/
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__description/intro__description.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
