--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
   padding-top: 28px;
   margin: 0 48px 0 48px;
+  max-width: 1280px;
   display: flex;
   justify-content: space-between;
 }
