--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 .header__lang-link {
   color: #FFFFFF;
-  margin-top: 46px;
+  margin-top: 46px 0 0 0;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 117%;
   font-family: 'Inter';
 }
 
