--- a/blocks/gallery/__grid-container/gallery__grid-container.css
+++ b/blocks/gallery/__grid-container/gallery__grid-container.css
@@ -1,17 +1,31 @@
 .gallery__grid-container {
-  margin: 0 auto;
+  /*margin: 0 48px;*/
+  max-width: 100%;
   display: grid;
-  padding: 0;
-  grid-template-columns: repeat(4, 284px);
-  grid-template-rows: repeat(3, 213px);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   gap: 16px;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: 1fr;
 }
 
-/*@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .gallery__grid-container {
-    grid-template-columns: repeat(3, 300px);
-    grid-template-rows: repeat(4, 225px);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4 1fr);
+    gap: 14px;
   }
-}*/
+}
+@media screen and (max-width: 768px) {
+  .gallery__grid-container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 16px;
+    /*margin: 0 24px;*/
+  }
+}
+@media screen and (max-width: 320px) {
+  .gallery__grid-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 12px;
+  }
+}
