--- a/blocks/gallery/__item/gallery__item.css
+++ b/blocks/gallery/__item/gallery__item.css
@@ -1,3 +1,16 @@
 .gallery__item {
-  
+  margin: 0;
+  max-width: 100%;
 }
+
+/*@media screen and (max-width: 1024px){
+  .gallery__item {
+    max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .gallery__item {
+    max-width: 352px;
+  }
+}*/
