--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,16 @@
   margin: 0 48px;
 }
 
+@media screen and (max-width: 768px){
+  .header {
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding-top: 16px;
+    margin: 0 16px;
+    
+  }
+}
