--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,3 +7,10 @@
   margin: 92px 0 40px 0;
   min-width: none;
 }
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
+}
