--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,6 +4,14 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  width: 50%;
+  width: 640px;
   font-family: 'Inter';
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    width: 288px;
+    font-size: 16px;
+    line-height: 125%;
+  }
 }
