--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,38 +1,10 @@
 .places__item {
   margin: 0;
   display: grid;
-  grid-template-columns: 460px 1fr;
-  grid-template-rows: 1fr 460px;
+  grid-template-columns: 460px 483px;
+  grid-template-rows: min-content 1fr;
   grid-template-areas: 'title link'
-                        'img desc'
-                        'img desc';
-  column-gap: 40px;
+                        'image text';
   row-gap: 48px;
-}
-
-.places__item img {
-  margin: 0;
-}
-
-.places__item h2 {
-  color: #ffffff;
-  font-family: 'Inter';
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 106%;
-  margin: 0;
-}
-
-.places__item p {
-  margin: 0;
-  color: #ffffff;
-  font-family: 'Inter';
-  font-size: 18px;
-  line-height: 163%;
-  align-self: start;
-  grid-area: desc;
-}
-
-.places__item a {
-  align-self: end;
+  column-gap: 40px;
 }
