--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,8 @@
 .places {
-  margin: 0 auto;
-  max-width: 1280px;
+  margin: 92px 148px 92px 148px;
+  max-width: min-content;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  row-gap: 80px;
 }
