--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,3 +1,15 @@
 .places__image {
+  max-width: 460px;
+}
 
+@media screen and (max-width: 1024px) {
+  .places__image {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__image {
+    max-width: 340px;
+  }
 }
