--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -6,3 +6,13 @@
   color: #ffffff;
   max-width: 100%;
 }
+
+.places__text p {
+  margin-top: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .places__text {
+    font-size: 16px;
+  }
+}
