--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -18,3 +18,10 @@
     margin: 88px 24px 90px 24px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .places {
+
+    margin: 64px 0 66px 0;
+  }
+}
