--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -7,4 +7,21 @@
   align-self: end;
   grid-area: title;
   margin: 0;
+  grid-area: title;
+}
+
+@media screen and (max-width: 768px) {
+  .places__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__title {
+    margin-left: 16px;
+    margin-right: 16px;
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
