Блок cover завершен

--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,11 @@
 @import url(../blocks/places/__link/places__link.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__text/places__text.css);
+
+/*COVER*/
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__text/cover__text.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+/*@import url(../blocks/cover/__overlay/cover__overlay.css);*/
+@import url(../blocks/cover/__background/cover__background.css);
