--- a/blocks/lead/__point/lead__point.css
+++ b/blocks/lead/__point/lead__point.css
@@ -1,9 +1,12 @@
-.lead__point:nth-of-type(1) {
-  
-  
+.lead__point{
+  position: absolute;
 }
 
-.lead__point:nth-of-type(2) {
+.lead__point_place_pskov {
+  top: 219.7px;
+  left: 37px;
+}
+/*.lead__point:nth-of-type(2) {
   
 }
 
@@ -17,4 +20,4 @@
 
 .lead__point:nth-of-type(5) {
   
-}
+}*/
