Завершен блок lead на 1280

--- a/blocks/lead/__point/lead__point.css
+++ b/blocks/lead/__point/lead__point.css
@@ -2,10 +2,11 @@
   position: absolute;
 }
 
-.lead__point_place_pskov {
+/*.lead__point_place_pskov {
   top: 219.7px;
   left: 37px;
-}
+}*/
+
 /*.lead__point:nth-of-type(2) {
   
 }
