--- a/blocks/lead/__locality/_place/lead__locality_place_novgorod.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_novgorod.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_novgorod {
+    top: 85px;
+    left: 87px;
+  }
 }
 
 @media screen and (max-width: 768px) {
