--- a/blocks/lead/__locality/_place/lead__locality_place_perm.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_perm.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_perm {
+    top: 213px;
+    left: 517px;
+  }
 }
 
 @media screen and (max-width: 768px) {
