--- a/blocks/lead/__locality/_place/lead__locality_place_ulanude.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_ulanude.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_ulanude {
+    top: 254px;
+    left: 846px;
+  }
 }
 
 @media screen and (max-width: 768px) {
