--- a/blocks/lead/__locality/_place/lead__locality_place_yaroslavl.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_yaroslavl.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_yaroslavl {
+    top: 276px;
+    left: 263px;
+  }
 }
 
 @media screen and (max-width: 768px) {
