--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,3 +3,17 @@
   position: relative;
   max-width: 1280px;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  
+}
+
+@media screen and (max-width: 320px) {
+  
+}
