--- a/blocks/lead/__locality/_place/lead__locality_place_kotelnich.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_kotelnich.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_kotelnich {
+    top: 241px;
+    left: 391px;
+  }
 }
 
 @media screen and (max-width: 768px) {
