--- a/blocks/lead/__locality/_place/lead__locality_place_krasnoyarsk.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_krasnoyarsk.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_krasnoyarsk {
+    top: 191px;
+    left: 777px;
+  }
 }
 
 @media screen and (max-width: 768px) {
