--- a/blocks/lead/__locality/_place/lead__locality_place_pskov.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_pskov.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_pskov {
+    top: 222px;
+    left: 22px;
+  }
 }
 
 @media screen and (max-width: 768px) {
