--- a/blocks/lead/__locality/_place/lead__locality_place_tver.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_tver.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__locality_place_tver {
+    top: 252px;
+    left: 176px;
+  }
 }
 
 @media screen and (max-width: 768px) {
