--- a/blocks/lead/__point/_place/lead__point_place_krasnoyarsk.css
+++ b/blocks/lead/__point/_place/lead__point_place_krasnoyarsk.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__point_place_krasnoyarsk {
+    top: 204px;
+    left: 813px;
+  }
 }
 
 @media screen and (max-width: 768px) {
