--- a/blocks/lead/__point/_place/lead__point_place_omsk.css
+++ b/blocks/lead/__point/_place/lead__point_place_omsk.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__point_place_omsk {
+    top: 256px;
+    left: 685px;
+  }
 }
 
 @media screen and (max-width: 768px) {
