--- a/blocks/lead/__point/_place/lead__point_place_perm.css
+++ b/blocks/lead/__point/_place/lead__point_place_perm.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__point_place_perm {
+    top: 227px;
+    left: 532px;
+  }
 }
 
 @media screen and (max-width: 768px) {
