--- a/blocks/lead/__point/_place/lead__point_place_tver.css
+++ b/blocks/lead/__point/_place/lead__point_place_tver.css
@@ -4,7 +4,10 @@
 }
 
 @media screen and (max-width: 1024px) {
-  
+  .lead__point_place_tver {
+    top: 252px;
+    left: 218px;
+  }
 }
 
 @media screen and (max-width: 768px) {
