--- a/blocks/lead/__point/_place/lead__point_place_manturovo.css
+++ b/blocks/lead/__point/_place/lead__point_place_manturovo.css
@@ -8,7 +8,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_manturovo {
+    top: 182px;
+    left: 274px;
+  }
 }
 
 @media screen and (max-width: 320px) {
