--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -13,7 +13,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead {
+    max-width: 768px;
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 320px) {
