--- a/blocks/lead/__background/lead__background.css
+++ b/blocks/lead/__background/lead__background.css
@@ -1,11 +1,13 @@
 @media screen and (max-width: 1024px) {
   .lead__background {
-    width: 928px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__background {
+    max-width: 768px;
+  }
 }
 
 @media screen and (max-width: 320px) {
