--- a/blocks/lead/__locality/_place/lead__locality_place_kotelnich.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_kotelnich.css
@@ -11,7 +11,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__locality_place_kotelnich {
+    top: 199px;
+    left: 324px;
+    max-width: 66px;
+  }
 }
 
 @media screen and (max-width: 320px) {
