--- a/blocks/lead/__locality/_place/lead__locality_place_krasnoyarsk.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_krasnoyarsk.css
@@ -11,7 +11,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__locality_place_krasnoyarsk {
+    top: 158px;
+    left: 643px;
+    max-width: 63px;
+  }
 }
 
 @media screen and (max-width: 320px) {
