--- a/blocks/lead/__locality/_place/lead__locality_place_manturovo.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_manturovo.css
@@ -8,7 +8,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__locality_place_manturovo {
+  top: 173px;
+  left: 283px;
+  max-width: 59px;
+  }
 }
 
 @media screen and (max-width: 320px) {
