--- a/blocks/lead/__locality/_place/lead__locality_place_pskov.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_pskov.css
@@ -11,7 +11,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__locality_place_pskov {
+    top: 183px;
+    left: 18px;
+    max-width: 31px;
+  }
 }
 
 @media screen and (max-width: 320px) {
