--- a/blocks/lead/__locality/_place/lead__locality_place_tver.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_tver.css
@@ -11,7 +11,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__locality_place_tver {
+    top: 208px;
+    left: 145px;
+    max-width: 29px;
+  }
 }
 
 @media screen and (max-width: 320px) {
