--- a/blocks/lead/__locality/_place/lead__locality_place_ulanude.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_ulanude.css
@@ -11,7 +11,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__locality_place_ulanude {
+    top: 210px;
+    left: 700px;
+    max-width: 49px;
+  }
 }
 
 @media screen and (max-width: 320px) {
