--- a/blocks/lead/__point/_place/lead__point_place_glazov.css
+++ b/blocks/lead/__point/_place/lead__point_place_glazov.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_glazov {
+    top: 235px;
+    left: 414px;
+  }
 }
 
 @media screen and (max-width: 320px) {
