--- a/blocks/lead/__point/_place/lead__point_place_novgorog.css
+++ b/blocks/lead/__point/_place/lead__point_place_novgorog.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_novgorod {
+    top: 97px;
+    left: 96px;
+  }
 }
 
 @media screen and (max-width: 320px) {
