--- a/blocks/lead/__point/_place/lead__point_place_omsk.css
+++ b/blocks/lead/__point/_place/lead__point_place_omsk.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_omsk {
+    top: 212px;
+    left: 567px;
+  }
 }
 
 @media screen and (max-width: 320px) {
