--- a/blocks/lead/__point/_place/lead__point_place_perm.css
+++ b/blocks/lead/__point/_place/lead__point_place_perm.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_perm {
+    top: 188px;
+    left: 440px;
+  }
 }
 
 @media screen and (max-width: 320px) {
