--- a/blocks/lead/__point/_place/lead__point_place_pskov.css
+++ b/blocks/lead/__point/_place/lead__point_place_pskov.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_pskov {
+    top: 171px;
+    left: 29px;
+  }
 }
 
 @media screen and (max-width: 320px) {
