--- a/blocks/lead/__point/_place/lead__point_place_tumen.css
+++ b/blocks/lead/__point/_place/lead__point_place_tumen.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_tumen {
+    top: 223px;
+    left: 484px;
+  }
 }
 
 @media screen and (max-width: 320px) {
