--- a/blocks/lead/__point/_place/lead__point_place_tver.css
+++ b/blocks/lead/__point/_place/lead__point_place_tver.css
@@ -11,7 +11,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__point_place_tver {
+    top: 209px;
+    left: 180px;
+  }
 }
 
 @media screen and (max-width: 320px) {
