--- a/blocks/lead/__locality/_place/lead__locality_place_pskov.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_pskov.css
@@ -19,5 +19,9 @@
 }
 
 @media screen and (max-width: 320px) {
-  
+  .lead__locality_place_pskov {
+    top: 76.6px;
+    left: 7.7px;
+    max-width: 13px;
+  }
 }
