--- a/blocks/lead/__locality/_place/lead__locality_place_glazov.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_glazov.css
@@ -19,5 +19,9 @@
 }
 
 @media screen and (max-width: 320px) {
-  
+  .lead__locality_place_glazov {
+    top: 98px;
+    left: 178px;
+    max-width: 15px;
+  }
 }
