--- a/blocks/lead/__locality/_place/lead__locality_place_krasnoyarsk.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_krasnoyarsk.css
@@ -19,5 +19,9 @@
 }
 
 @media screen and (max-width: 320px) {
-  
+  .lead__locality_place_krasnoyarsk {
+    top: 66px;
+    left: 268px;
+    max-width: 26.5px;
+  }
 }
