--- a/blocks/lead/__locality/_place/lead__locality_place_omsk.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_omsk.css
@@ -19,5 +19,9 @@
 }
 
 @media screen and (max-width: 320px) {
-  
+  .lead__locality_place_omsk {
+    top: 96px;
+    left: 232px;
+    max-width: 11.2px;
+  }
 }
