--- a/blocks/lead/__locality/_place/lead__locality_place_tver.css
+++ b/blocks/lead/__locality/_place/lead__locality_place_tver.css
@@ -19,5 +19,9 @@
 }
 
 @media screen and (max-width: 320px) {
-  
+  .lead__locality_place_tver {
+    top: 86.9px;
+    left: 60.6px;
+    max-width: 12.1px;
+  }
 }
