--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,26 +1,30 @@
-.text {
+.cover__text {
   width: 560px;
   position: absolute;
   top: 245px;
   left: 312px;
 }
 
+.cover__text:hover {
+  opacity: none;
+}
+
 @media screen and (max-width: 1024px) {
-  .text{
+  .cover__text{
     top: 195px;
     left: 232px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .text {
+  .cover__text {
     top: 115px;
     left: 104px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .text {
+  .cover__text {
     width: 288px;
     top: 33px;
     left: 16px;
