--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,11 +8,19 @@
   align-items: flex-end;
 }
 
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 0 24px 0 24px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer {
     flex-direction: column;
     padding: 0 0 0 16px;
     align-items: flex-start;
     margin-top: 64px;
+    font-size: 24px;
+    line-height: 24px;
   }
 }
