--- a/blocks/gallery/__grid-container/gallery__grid-container.css
+++ b/blocks/gallery/__grid-container/gallery__grid-container.css
@@ -1,10 +1,10 @@
 .gallery__grid-container {
-  /*margin: 0 48px;*/
   max-width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 16px;
+  margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -19,7 +19,6 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
-    /*margin: 0 24px;*/
   }
 }
 @media screen and (max-width: 320px) {
