--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,6 +8,12 @@
   margin-top: 8px;
 }
 
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__caption {
     margin-left: 16px;
