Исправление недочетов с отступами

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,11 @@
   max-width: 1280px;
   display: flex;
   justify-content: space-between;
-  margin: 0 48px;
+  margin: 28px 48px 0 48px;
+}
+
+@media screen and (max-width: 1024px) {
+  
 }
 
 @media screen and (max-width: 768px){
