--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,8 +8,9 @@
   margin: 0;
 }
 
-/*@media screen and (max-width: 320px) {
+@media screen and (max-width: 320px) {
   .footer__link {
-    margin-bottom: 32px;
+    font-size: 24px;
+    line-height: 24px;
   }
-}*/
+}
