--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,3 +3,15 @@
   margin: 0 0 92px 0;
   padding: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .intro__list {
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__list {
+    margin-bottom: 64px;
+  }
+}
