--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,9 +8,16 @@
   min-width: none;
 }
 
+@media screen and (max-width: 768px) {
+  .intro__title {
+    margin-top: 88px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .intro__title {
     font-size: 32px;
     line-height: 109%;
+    margin-top: 64px;
   }
 }
