--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,16 +3,23 @@
   font-size: 96px;
   line-height: 100px;
   color: #ffffff;
-  margin: 56px auto 92px auto;
+  margin: 56px auto 32px auto;
   max-width: 720px;
   line-height: 104%;
   text-align: center;
   font-family: 'Inter';
 }
 
+@media screen and (max-width: 1024px) {
+  .lead__title {
+    margin-top: 48px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__title {
     font-size: 40px;
     line-height: 110%;
+    margin-bottom: 16px;
   }
 }
