--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,23 @@
-
 .page {
   margin: 0 auto;
   max-width: 1280px;
   background-color: #2a2c2f;
+}
+
+@media screen and (max-width: 1024px) {
+  .page {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page {
+    max-width: 320px;
+  }
 }
