--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media screen and (max-width: 690px) {
+  .lead__title {
+    font-size: 60px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__title {
     font-size: 40px;
