--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   max-width: 1280px;
   background-color: #2a2c2f;
+  font-family: 'Inter', sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
