--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,5 +1,5 @@
 .places__title {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
