--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   color: #ffffff;
   font-size: 14px;
   line-height: 16px;
