--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
