--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,7 +3,7 @@
   margin-top: 46px 0 0 0;
   font-size: 24px;
   line-height: 117%;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   text-decoration: none;
 }
 
