--- a/blocks/intro/__description/intro__description.css
+++ b/blocks/intro/__description/intro__description.css
@@ -1,6 +1,6 @@
 .intro__description {
   margin: 40px 0 33px 0;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   color: #ffffff;
   font-size: 16px;
   line-height: 163%;
