--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,7 +1,7 @@
 .intro__list-item {
   margin: 0;
   color: #ffffff;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-size: 12px;
   line-height: 150%;
 }
