--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,5 @@
 .intro__title {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
