--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
