--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,7 @@
   line-height: 36px;
   text-align: center;
   width: 640px;
-  font-family: 'Inter';
+  /*font-family: 'Inter', sans-serif;*/
 }
 
 @media screen and (max-width: 1024px) {
