--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -1,5 +1,5 @@
 .places__text {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-size: 18px;
   line-height: 29px;
   align-self: flex-start;
