--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,10 @@
 .lead__caption {
-  font-family: 'Inter', sans-serif;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #ffffff;
-  margin-top: 8px;
+  margin: 8px 0 0 0;
 }
 
 @media screen and (max-width: 768px) {
