--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,19 +1,16 @@
 .lead__image {
-  margin: 0 148px 0 148px;
-  position: relative;
-  max-width: 1280px;
-}
-
-@media screen and (max-width: 1024px) {
-  .lead__image {
-    margin: 0;
-  }
+  max-width: 984px;
+  display: block;
 }
 
 @media screen and (max-width: 768px) {
-  
+  .lead__image {
+    max-width: 768px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-  
+  .lead__image {
+    max-width: 320px;
+  }
 }
