--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,7 @@
 .lead {
   max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 148px;
+  margin-right: 148px;
 }
 
 @media screen and (max-width: 1024px) {
