--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_enabled/header__lang-link_enabled.css);
+@import url(../blocks/header/__list-item/header__list-item.css);
 
 /*LEAD*/
 @import url(../blocks/lead/lead.css);
