--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,23 +2,21 @@
   margin: 0;
   display: flex;
   justify-content: space-between;
-  padding: 0 48px 0 48px;
+  /* padding: 0 48px 0 48px;
   margin-top: 92px;
-  margin-bottom: 24px;
+  margin-bottom: 24px; */
   align-items: flex-end;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .footer {
     padding: 0 24px 0 24px;
   }
-}
+} */
 
 @media screen and (max-width: 320px) {
   .footer {
     flex-direction: column;
-    padding: 0 0 0 16px;
     align-items: flex-start;
-    margin-top: 64px;
   }
 }
