--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,4 +4,18 @@
   font-size: 14px;
   line-height: 16px;
   text-align: right;
+  margin: 92px 48px 24px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__copyright {
+    padding-right: 24px;
+    margin-top: 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    margin: 48px 0 24px 16px;
+  }
 }
