--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,17 +1,21 @@
 .footer__links {
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  column-gap: 18px;
-  padding: 0;
-  margin: 0;
+  margin: 92px 0 24px 48px;
+  /* margin-top: 92px;
+  margin-bottom: 24px; */
+}
+
+@media screen and (max-width: 768px) {
+  .footer__links {
+    padding-left: 24px;
+    margin-top: 88px;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .footer__links {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, auto);
-    row-gap: 32px;
-    margin-bottom: 48px;
+    padding: 0 0 0 16px;
+    margin-top: 64px;
+    margin-left: 0;
   }
 }
+
