--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,16 +1,33 @@
-.gallery {
-  margin: 0 48px;
+.gallery{
   max-width: 100%;
+  margin: 0 48px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 16px;
+  
 }
 
+@media screen and (max-width: 1024px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4 1fr);
+    gap: 14px;
+  }
+}
 @media screen and (max-width: 768px) {
   .gallery {
     margin: 0 24px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 16px;
   }
 }
-
 @media screen and (max-width: 320px) {
   .gallery {
     margin: 0 16px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 12px;
   }
 }
