--- a/pages/index.css
+++ b/pages/index.css
@@ -54,6 +54,7 @@
 @import url(../blocks/intro/__description/intro__description.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-item/intro__list-item.css);
+@import url(../blocks/intro/__list-text/intro__list-text.css);
 
 /*GALLERY*/
 @import url(../blocks/gallery/gallery.css);
@@ -68,6 +69,8 @@
 @import url(../blocks/places/__link/places__link.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__text/places__text.css);
+@import url(../blocks/places/__link-caption/places__link-caption.css);
+@import url(../blocks/places/__link-address/places__link-address.css);
 
 /*COVER*/
 @import url(../blocks/cover/cover.css);
@@ -82,6 +85,7 @@
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__list/footer__list.css);
 
 /*hover-link*/
 @import url(../blocks/hover-link/hover-link.css);
