--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,7 +4,7 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  width: 640px;
+  max-width: 640px;
 }
 
 @media screen and (max-width: 1024px) {
