--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,17 +1,16 @@
 .cover__subtitle {
-  font-family: 'Inter', sans-serif;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
   color: #ffffff;
-  width: 360px;
+  max-width: 360px;
   margin: 32px auto 0 auto;
 }
 
 @media screen and (max-width: 320px) {
   .cover__subtitle {
     margin-top: 16px;
-    width: 288px;
+    max-width: 288px;
     font-size: 14px;
     line-height: 16px;
   }
