--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,4 @@
 .footer__copyright {
-  font-family: 'Inter', sans-serif;
   color: #ffffff;
   font-size: 14px;
   line-height: 16px;
@@ -9,7 +8,7 @@
 
 @media screen and (max-width: 768px) {
   .footer__copyright {
-    padding-right: 24px;
+    margin-right: 24px;
     margin-top: 88px;
   }
 }
