--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,12 +1,10 @@
 .footer__links {
   margin: 92px 0 24px 48px;
-  /* margin-top: 92px;
-  margin-bottom: 24px; */
 }
 
 @media screen and (max-width: 768px) {
   .footer__links {
-    padding-left: 24px;
+    margin-left: 24px;
     margin-top: 88px;
   }
 }
