--- a/blocks/gallery/__grid-container/gallery__grid-container.css
+++ b/blocks/gallery/__grid-container/gallery__grid-container.css
@@ -1,10 +1,10 @@
-/* .gallery__grid-container {
-  max-width: 100%;
+
+.gallery__grid-container {
+  margin: 0 48px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 16px;
-  margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -16,6 +16,7 @@
 }
 @media screen and (max-width: 768px) {
   .gallery__grid-container {
+    margin: 0 24px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
@@ -23,8 +24,9 @@
 }
 @media screen and (max-width: 320px) {
   .gallery__grid-container {
+    margin: 0 16px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
     gap: 12px;
   }
-} */
+}
