--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,12 @@
 .header__logo {
   max-width: 176px;
-  margin: 0;
+  margin: 28px 0 0 48px;
+}
+
+@media screen and (max-width: 768px) {
+  .header__logo {
+    margin-left: 24px;
+  }
 }
 
 @media screen and (max-width: 320px) {
