--- a/blocks/intro/__description/intro__description.css
+++ b/blocks/intro/__description/intro__description.css
@@ -1,8 +1,30 @@
 .intro__description {
-  margin: 40px 0 33px 0;
-  font-family: 'Inter', sans-serif;
+  margin: 40px 442px 0 148px;
   color: #ffffff;
   font-size: 16px;
   line-height: 163%;
   text-align: left;
+}
+
+@media screen and (max-width: 1024px) {
+  .intro__description {
+    margin-right: 286px;
+    margin-left: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro__description {
+    min-width: 720px;
+    margin-right: 24px;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__description {
+    min-width: 288px;
+    margin-right: 16px;
+    margin-left: 16px;
+  }
 }
