--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,24 +1,3 @@
 .intro {
-  margin: 0 442px 0 148px;
-  min-width: 690px;
-}
-
-@media screen and (max-width: 1024px) {
-  .intro {
-    margin: 0 286px 0 48px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .intro {
-    min-width: 720px;
-    margin: 0 24px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .intro {
-    min-width: 288px;
-    margin: 0 16px;
-  }
+  min-width: min-content;
 }
