--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,4 @@
 .places {
-  margin: 92px 148px 92px 148px;
   max-width: min-content;
   display: grid;
   grid-template-columns: 1fr;
@@ -7,21 +6,14 @@
   row-gap: 80px;
 }
 
-@media screen and (max-width: 1024px) {
-  .places {
-    margin: 92px 48px 92px 48px;
-  }
-}
-
 @media screen and (max-width: 768px) {
   .places {
-    margin: 88px 24px 90px 24px;
+    row-gap: 73px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places {
-
-    margin: 64px 0 66px 0;
+    row-gap: 50px;
   }
 }
