--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,13 @@
   text-transform: uppercase;
   color: #ffffff;
   margin: 8px 0 0 0;
+  margin-left: 178px;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__caption {
+    margin-left: 48px;
+  }
 }
 
 @media screen and (max-width: 768px) {
