--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,11 +1,22 @@
 .lead__image {
   max-width: 984px;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    max-width: 928px;
+    margin-left: 48px;
+    margin-right: 48px;
+}
 }
 
 @media screen and (max-width: 768px) {
   .lead__image {
     max-width: 768px;
+    margin: 0;
   }
 }
 
